<resources>
    <string name="app_name">Expert</string>
    <string name="app_name_display">SkilEx</string>
    <string name="tag_line">THE ULTIMATE SERVICE APP</string>

    <string name="empty" />
    <string name="error_occurred">Failed to connect to the server. Please try again.</string>
    <string name="error_no_net">No internet access. Please check your connection and try again.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Dialog Fragment-->
    <string name="alert_button_ok">OK</string>
    <string name="alert_button_cancel">Cancel</string>

    <!--Side menu-->
    <string name="text_tamil" translatable="false">தமிழ்</string>
    <string name="text_english" translatable="false">English</string>

    <string-array name="language_selection">
        <item>தேர்ந்தெடுக்கவும்</item>
        <item>தமிழ்</item>
        <item>English</item>
    </string-array>

    <!--General-->
    <string name="confirm">Confirm</string>
    <string name="progress_loading">Loading&#8230;</string>
    <string name="error_entry">Entry Invalid</string>
    <string name="error_mail">Enter valid mail ID</string>
    <string name="error_number">Enter valid phone number</string>
    <string name="empty_entry">Field cannot be empty</string>

    <!--Login-->
    <string name="welcome">Welcome!</string>
    <string name="enter_text">Enter Mobile Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="mobile_number">Mobile Number</string>

    <!--OTP Page-->
    <string name="verificationcode">Verification Code</string>
    <string name="didntrecievecode">Didn\'t receive the code?\t</string>
    <string name="entercodetxt">We have sent you 4 digit verification code to\nyour mobile number</string>
    <string name="resend">Resend now</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="changenumber">Change number</string>
    <string name="otp_action_bar">OTP</string>
    <string name="otp_confirm_no">Confirm your mobile number: </string>
    <string name="otp_proceed">Proceed</string>
    <string name="otp_invalid">Invalid OTP</string>

    <!--Landing page-->
    <string name="home">Home</string>
    <string name="service_expert">Service Expert</string>
    <string name="profile_title">Profile</string>
    <string name="dashboard">Dashboard</string>

    <!--Home page-->
    <string name="assigned">Assigned Service</string>
    <string name="ongoing">Ongoing Service</string>
    <string name="service_history">Service History</string>

    <!--Profile Settings Page-->
    <string name="about">About</string>
    <string name="id_card">Digital ID Card</string>
    <string name="share">Share app</string>
    <string name="logout">Logout</string>
    <string name="update_service">Update Services</string>
    <string name="bank_details">Edit Bank Details</string>
    <string name="company_details">Company Details</string>

    <!--Digital ID Card-->
    <string name="exp_major">Expertise</string>
    <string name="exp_join_date">Joining Date</string>
    <string name="exp_ph_no">Phone Number</string>
    <string name="exp_dob">Date of Birth</string>
    <string name="skilex_address">SkilEx Multiservices Private Limited\n30/6, New Damu Nagar, Pappanaikenpalayam,\nCoimbatore-641037.</string>

    <!--Requested service list-->
    <string name="category">Category</string>
    <string name="subcategory">Sub Category</string>
    <string name="date">Select Date</string>
    <string name="time">Select Time Slot</string>
    <string name="location">Select Service Location</string>
    <string name="cancel">Cancel Service</string>
    <string name="accept">Accept Service</string>
    <string name="assign">Assign</string>
    <string name="cancel_service_noadvance_alert1">Are you sure you want to cancel your service?</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">No</string>
    <string name="reason">Reason</string>
    <string name="comment">Comment</string>

    <!--Assigned Services-->
    <string name="assigned_title">Assigned Services</string>

    <!--Assigned service-->
    <string name="customer_name">Customer Name</string>
    <string name="customer_name_text">Customer Name Text</string>
    <string name="customer_number">Customer Number</string>
    <string name="customer_number_text">Customer Number Text</string>
    <string name="service_time">Service Time</string>
    <string name="service_time_text">Service Time Text</string>
    <string name="service_cost">Estimated Cost</string>
    <string name="service_cost_text">Estimated Cost Text</string>
    <string name="initiate">Initiate</string>

    <!--Cancel service-->
    <string name="cancel_title">Cancel Service</string>
    <string name="cancel_details">Cancellation Details</string>
    <string name="reason_hint">Due to non availability</string>
    <string name="reason_comments">Comments(if any)</string>
    <string name="reason_comments_hint">I will book the service once i am available</string>
    <string name="service_number">Service Number</string>
    <string name="service_number_hint">Service Number Hint</string>
    <string name="cancelled_by">Cancelled By</string>
    <string name="cancelled_by_hint">Cancelled By Hint</string>

    <!--OnGoing Services-->
    <string name="ongoing_title">Ongoing Services</string>

    <!--Additional Services-->
    <string name="additional_title">Additional Services</string>

    <!--Completed Services-->
    <string name="completed_title">Completed Services</string>

    <!--Service process-->
    <string name="next">Next</string>
    <string name="sp_category">Electrical</string>
    <string name="sp_sub_category">Generator</string>
    <string name="sp_customer_name">Customer Name</string>
    <string name="sp_customer_name_hint">Customer Name</string>
    <string name="sp_service_date">Service Date</string>
    <string name="sp_service_date_hint">Service Date</string>
    <string name="sp_service_time">Service Time</string>
    <string name="sp_service_time_hint">Service Time</string>
    <string name="sp_service_provider">Service Provider</string>
    <string name="sp_service_provider_hint">Service Provider</string>
    <string name="sp_enter_otp">Enter OTP to start the work</string>
    <string name="sp_enter_otp_hint">Enter OTP</string>
    <string name="request_otp">Request OTP</string>
    <string name="start">Start</string>
    <string name="start_date_time">Date and time at which the service started:</string>
    <string name="resume_date_time">Date and time at which the service resumed:</string>
    <string name="resume">Resume</string>
    <string name="additional_services">Additional Services</string>
    <string name="update">Update</string>
    <string name="hold">Hold</string>
    <string name="submit">Submit</string>
    <string name="material_used">Material used</string>
    <string name="attach_bill">Attach bill</string>
    <string name="date_selected">Selected Date</string>
    <string name="time_selected">Requested Time Slot</string>
    <string name="service_provider">Service Commando</string>
    <string name="sub_total">Sub Total</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="coupon">Coupon</string>
    <string name="select_coupon">Select Coupon</string>
    <string name="apply_coupon">Apply</string>
    <string name="grand_total_pay">Grand Total</string>
    <string name="service_person">Service Expert</string>
    <string name="share_invoice">Share Invoice</string>
    <string name="view_bill">View Bill</string>
    <string name="payment">Payment</string>
    <string name="service_charge">Service charge</string>
    <string name="additional_charge">Additional charge</string>
    <string name="grand_total">Total Service Cost</string>
    <string name="view_summary">View Summary</string>
    <string name="service_summary">Service Summary</string>
    <string name="clear">Clear All</string>
    <string name="advance_amount">Advance Amount</string>
    <string name="pay_button">Pay</string>

    <string name="language">Language</string>
    <string name="choose_language">Choose your preferred language</string>

    <string name="user_name">Name</string>
    <string name="user_address">Address</string>
    <string name="user_mail">E-Mail</string>
    <string name="user_gender">Gender</string>
    <string name="select_user_gender">Select Gender</string>

    <string name="remove_service">Service Removed</string>
    <string name="about_us">About Us</string>
    <string name="google_android_map_api_key">AIzaSyBhkisGSNkn_QS3yOpS1QnN_Bhzs6_aiQE</string>
<!--    <string name="google_android_map_api_key">AIzaSyD428E0W4-pf4kJuJ3rsqG5vCELRgmR2ok</string>-->

    <!--About Us Page-->
    <string name="about_content">SkilEx is an emerging Indian start up that aims to build a scalable business model which serves as a platform connecting people, who are in need of local and personal services, with service commandos. When there is need of service there is always a void in reaching to service experts at any given time. SkilEx comes into this scene of desperation to help consumers get the required service done at the right time. One can access a range of local services like refurbishment, renovation, restoration etc.; and personal services like fitness training, massages, physiotherapy, counselling, etc., via SkilEx and get things done in a convenient and affordable way.
\n\nInitially aimed at launching in major cities of South India, SkilEx’s vision is to expand its base across the country including all the cities, building a bond between the service commandos and their customers.
</string>


    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Start Tracking</string>
    <string name="remove_location_updates">Stop Tracking</string>

    <string name="location_updated">Location Updated: %1$s</string>


    <!--Rating Page-->
    <string name="rating_title">Rate Service</string>
    <string name="rating_text">Rate your service</string>
    <string name="rate">Rate</string>


</resources>
