<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_cancelservice_notification" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_user_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/edt_user_reason"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/reason"
                android:inputType="text"
                android:fontFamily="@font/helvetica"
                android:clickable="false"
                android:singleLine="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_user_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/edt_user_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment"
                android:inputType="text"
                android:minHeight="50dp"
                android:fontFamily="@font/helvetica"
                android:clickable="false"
                android:singleLine="true"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit_reason"
            android:layout_width="wrap_content"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:background="@drawable/button_round_color"
            android:fontFamily="@font/helvetica"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:text="@string/alert_button_ok"/>



    </LinearLayout>

</LinearLayout>