<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/ic_login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llAssigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_assigned"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@color/light_orange"
                android:padding="10dp"
                android:src="@drawable/ic_assigned_service" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/assigned"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOnGoing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_ongoing"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@color/light_violet"
                android:padding="10dp"
                android:src="@drawable/ic_ongoing_service" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/ongoing"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_service_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border_service_history"
            android:orientation="horizontal"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@color/light_orange_1"
                android:padding="10dp"
                android:src="@drawable/ic_service_history" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/service_history"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>